--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,24 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <header>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Favorites</a></li>
+          <li><a href="#">MyTV</a></li>
+       </ul>
+      </div>
+    </nav>
+  </header>
+  <main><app-root></app-root></main>
+  <footer>
+    
+  </footer>>
 </body>
 </html>
